bux fixes regarding updating blog posts. Also made some styling changes; changed the default font to something more legible

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: #e9e9e9;
-  font-family: 'Playfair Display', serif;
+  font-family: 'Delius', cursive;
 }
 
 nav {
